--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,8 +50,17 @@ p {
   flex-direction: column;
   justify-content: space-between;
   border-radius: 5px;
-  height: 200px;
+  height: 450px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
+}
+
+.post-card-container img {
+  border-radius: 5px;
+}
+
+.post-card-container button {
+  background-color: transparent;
+  border: none;
 }
 
 .search-icon {
@@ -147,18 +156,8 @@ p {
   gap: 20px;
 }
 
-.btn {
-  padding: 10px 20px;
-  border-radius: 20px;
-  background-color: transparent;
-  border-color: #DDDDDD;
-  color: #DDDDDD;
-  cursor: pointer;
-}
-
-.btn-active {
-  color: #008DDA;
-  border-color: #008DDA;
+.post-card-date {
+  font-style: italic;
 }
 
 @media only screen and (max-width: 767px) {
@@ -169,4 +168,4 @@ p {
   .main, .blog-detail-main {
     grid-template-columns: 1fr;
   }
-}
+} 
